# Finances

./: CMakeLists.txt  README.md
src/: PyServer.py  SQLite_functions.h  encrypt.h  main.cpp
